--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,21 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-eframe = "0.10.0" # Gives us egui, epi and web+native backends
+eframe = { version = "0.11.0", features = ["http"]}
 serde = { version = "1", features = ["derive"], optional = true }
 legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen"]  }
 rand = { version = "0.8.2" }
 getrandom = { version = "0.2", features = ["js"] }
+image = { version = "0.23.14" }
+js-sys = "0.3.50"
+
+# For compiling to web:
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+futures = "0.3.14"
+egui_web = { version = "0.11.0", features = ["http"]}
+wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"]  }
+wasm-bindgen-futures = "0.4.23"
+console_error_panic_hook = "0.1.6"
 
 [features]
 default = []
@@ -24,11 +34,15 @@ persistence = ["eframe/persistence", "serde"] # Enable if you want to persist ap
 
 [profile.release]
 opt-level = 2 # fast and small wasm
+debug = true
 
-[patch.crates-io]
-
-# If you want to use the bleeding edge version of `egui`:
-# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
-
-# If you fork https://github.com/emilk/egui you can test with:
-# eframe = { path = "../egui/eframe" }
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+  'Headers',
+  'Request',
+  'RequestInit',
+  'RequestMode',
+  'Response',
+  'Window',
+]
